add paragraphs to biography

--- a/biography.html
+++ b/biography.html
@@ -39,13 +39,30 @@
                 <div>
                     <h2>Biography</h2>
                 </div>
-                <div class="half">
-                    <div>
-                        <img src="assets/images/me.webp" alt="Picture of Johannes">
-                        <p>dEEGE begun his producer career at 2019. He decided to collaborate with his friend as both were just starting out. </p>
+                <div class="halves">
+                    <div class="half">
+                        <div class="quarter-img">
+                            <img src="assets/images/me.webp" alt="Picture of Johannes">
+                        </div>
+                        <div class="quarter-text">
+                            <p>
+                                dEEGE begun his producer career at 2019. He decided to collaborate with his friend as both were just starting out.  
+                                Since the beginning of his journey, he has explored different genres. Some of those genres are hip-hop, rnb, dnb, garage and techno. 
+                                He is today actively exploring new genres in ways to expand his style.                     
+                            </p>
+                            <br>
+                            <p>
+                                dEEGE has studied 1 year at <a href="https://karlskogafolkhogskola.se/" target="_blank" rel="noopener">Karlskoga Folkhögskola</a> in Music Production.
+                                Through his school year he got to collab with different producers and artists working in different genres.
+                                At <a href="https://karlskogafolkhogskola.se/" target="_blank" rel="noopener">Karlskoga Folkhögskola</a> he has his first live performance on a stage.
+                                Mostly of dEEGE's producer career was shaped in his bedroom, that's where he has learnt the most and built his own universe.
+                            </p>
+                        </div>
                     </div>
-                    <div>
-                        <p>text goes here</p>
+                    <div class="half">
+                        <p>
+                            For quite some time, music has been mostly a hobby and not a profession, though he does provide services on his free-time if there is payment.
+                        </p>
                         <img src="assets/images/picturedg.webp" alt="Picture of dEEGE">
                     </div>
                 </div>
