--- a/biography.html
+++ b/biography.html
@@ -8,6 +8,11 @@
     <meta name="keywords" content="producer, producing, beats, artist, örebro, sweden">
     <!-- add meta data for description, keywords -->
     <link rel="stylesheet" href="assets/css/style.css"> <!-- link css with correct filepath -->
+    
+    <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
 
     <title>dEEGE Discography</title>
 </head>
