update all page titles, fix heading order and remove webmanifest from favicon

--- a/overview.html
+++ b/overview.html
@@ -12,9 +12,8 @@
     <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="manifest" href="assets/favicon/site.webmanifest">
-
-    <title>dEEGE Discography</title>
+    
+    <title>dEEGE Overview</title>
 </head>
 <body>
     <header id="page-header"> <!-- header logo and navigation -->
@@ -81,7 +80,7 @@
             <div class="container2">
                 <div class="bg-white">
                     <div class="card">
-                        <h1>Albums & Singles</h1>
+                        <h2>Albums & Singles</h2>
                     </div>
                     <div class="card">
                         <a href="https://open.spotify.com/" target="_blank" rel="noopener"><img src="assets/images/pink-yaeger.webp" alt="Pink Yaeger album by Theophilius and dEEGE"></a>
