fixed born in link and albums and singles links

--- a/discography.html
+++ b/discography.html
@@ -58,7 +58,7 @@
                             </tr>
                             <tr>
                                 <td class="strong">Born</td>
-                                <td>November 29, 2000 in <a href="#">Karlskoga, Sweden</a></td>
+                                <td>November 29, 2000 in <a href="https://bit.ly/karlskoga-sweden" target="_blank" rel="noopener">Karlskoga, Sweden</a></td>
                             </tr>
                             <tr>
                                 <td class="strong">Genre</td>
