--- a/overview.html
+++ b/overview.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    
+
     <title>dEEGE Overview</title>
 </head>
 <body>
@@ -57,7 +57,7 @@
                             </tr>
                             <tr>
                                 <td class="strong">Born</td>
-                                <td>November 29, 2000 in <a href="#">Karlskoga, Sweden</a></td>
+                                <td>November 29, 2000 in <a href="https://bit.ly/karlskoga-sweden" target="_blank" rel="noopener">Karlskoga, Sweden</a></td>
                             </tr>
                             <tr>
                                 <td class="strong">Genre</td>
@@ -83,10 +83,10 @@
                         <h2>Albums & Singles</h2>
                     </div>
                     <div class="card">
-                        <a href="https://open.spotify.com/" target="_blank" rel="noopener"><img src="assets/images/pink-yaeger.webp" alt="Pink Yaeger album by Theophilius and dEEGE"></a>
-                        <a href="https://open.spotify.com/" target="_blank" rel="noopener"><img src="assets/images/in-the-hills.webp" alt="In The Hills single by Theophilius and dEEGE"></a>
-                        <a href="https://open.spotify.com/" target="_blank" rel="noopener"><img src="assets/images/rose-petals.webp" alt="Rose Petals single på Theophilius and dEEGE"></a>
-                        <a href="https://open.spotify.com/" target="_blank" rel="noopener"><img src="assets/images/oceane.webp" alt="Océane single by Theophilius and dEEGE"></a>
+                        <a href="https://open.spotify.com/album/71O2AZXT9XxyyFaHzOOfdC" target="_blank" rel="noopener"><img src="assets/images/pink-yaeger.webp" alt="Pink Yaeger album by Theophilius and dEEGE"></a>
+                        <a href="https://open.spotify.com/album/2OcdsKz8ztwlYDllJrn8w2" target="_blank" rel="noopener"><img src="assets/images/in-the-hills.webp" alt="In The Hills single by Theophilius and dEEGE"></a>
+                        <a href="https://open.spotify.com/album/7712lb94recAaRKxTNkc3z" target="_blank" rel="noopener"><img src="assets/images/rose-petals.webp" alt="Rose Petals single på Theophilius and dEEGE"></a>
+                        <a href="https://open.spotify.com/album/4bgARyrRMhbeYK3BTkXJHm" target="_blank" rel="noopener"><img src="assets/images/oceane.webp" alt="Océane single by Theophilius and dEEGE"></a>
                     </div>
                 </div>
             </div>
