remove <hr> from table and replace border-bottom

--- a/discography.html
+++ b/discography.html
@@ -48,10 +48,9 @@
                         <p>Discography</p>
                         <h2>dEEGE</h2>
                         <table id="quick-info">
-                            <tr>
+                            <tr class="border-bottom">
                                 <th colspan="2" class="strong">dEEGE - Artist Details</th>
                             </tr>
-                            <hr>
                             <tr>
                                 <td class="strong">Active</td>
                                 <td>2019-</td>
