deleted unused class in table quick-info

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <p>Discography</p>
                         <h2>dEEGE</h2>
                         <table id="quick-info">
-                            <tr class="border-bottom"> <!-- add border bottom here dEEGE!-->
+                            <tr> <!-- add border bottom here dEEGE!-->
                                 <th colspan="2" class="strong">dEEGE - Artist Details</th>
                             </tr>
                             <tr>
