add final comments

--- a/biography.html
+++ b/biography.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <!-- link to downloaded favicon -->
 
     <title>dEEGE Discography</title>
 </head>
@@ -24,7 +25,7 @@
                 </a>
             </div>
             <div>
-                <nav id="menu">
+                <nav id="menu"> <!-- navigation menu-->
                     <ul>
                         <li><a href="index.html">Overview</a>
                         </li>
@@ -37,9 +38,9 @@
             </div>
         </div>
     </header>
-    <main> <!-- main page, content about deege, and overview-->
+    <main>
         <section>
-            <div id="biography">
+            <div id="biography"> <!-- biography about dEEGE -->
                 <div>
                     <h2>Biography</h2>
                 </div>
@@ -52,7 +53,7 @@
                             <p>
                                 dEEGE begun his producer career at 2019. He decided to collaborate with his friend as both were just starting out.  
                                 Since the beginning of his journey, he has explored different genres. Some of those genres are hip-hop, rnb, dnb, garage and techno. 
-                                He is today actively exploring new genres in ways to expand his style.                     
+                                He is today actively exploring new genres in ways to expand his style. 
                             </p>
                             <br>
                             <p>
