--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <!-- link to downloaded favicon -->
 
     <title>dEEGE Overview</title>
 </head>
@@ -20,11 +21,11 @@
         <div class="container-header">
             <div>
                 <a href="index.html">
-                <h1 id="logo" class="text-uppercase">Tune<span style="color:#2b78e4">Log</span></h1>
+                <h1 id="logo" class="text-uppercase">Tune<span style="color:#2b78e4">Log</span></h1> <!-- logo -->
                 </a>
             </div>
             <div>
-                <nav id="menu">
+                <nav id="menu"> <!-- navigation menu-->
                     <ul>
                         <li><a href="index.html" class="active">Overview</a>
                         </li>
@@ -47,8 +48,8 @@
                     <div>
                         <p>Discography</p>
                         <h2>dEEGE</h2>
-                        <table id="quick-info">
-                            <tr> <!-- add border bottom here dEEGE!-->
+                        <table id="quick-info"> <!-- table to display basic information on landing page -->
+                            <tr>
                                 <th colspan="2" class="strong">dEEGE - Artist Details</th>
                             </tr>
                             <tr>
@@ -56,7 +57,7 @@
                                 <td>2019-</td>
                             </tr>
                             <tr>
-                                <td class="strong">Born</td>
+                                <td class="strong">Born</td> <!-- link to map over Karlskoga, Sweden -->
                                 <td>November 29, 2000 in <a href="https://bit.ly/karlskoga-sweden" target="_blank" rel="noopener">Karlskoga, Sweden</a></td>
                             </tr>
                             <tr>
