--- a/discography.html
+++ b/discography.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <!-- link to downloaded favicon -->
 
     <title>dEEGE Discography</title>
 </head>
@@ -24,7 +25,7 @@
                 </a>
             </div>
             <div>
-                <nav id="menu">
+                <nav id="menu"> <!-- navigation menu-->
                     <ul>
                         <li><a href="index.html">Overview</a>
                         </li>
@@ -47,7 +48,7 @@
                     <div>
                         <p>Discography</p>
                         <h2>dEEGE</h2>
-                        <table id="quick-info">
+                        <table id="quick-info"> <!-- table to display basic information on landing page -->
                             <tr>
                                 <th colspan="2" class="strong">dEEGE - Artist Details</th>
                             </tr>
@@ -56,7 +57,7 @@
                                 <td>2019-</td>
                             </tr>
                             <tr>
-                                <td class="strong">Born</td>
+                                <td class="strong">Born</td> <!-- link to map over Karlskoga, Sweden -->
                                 <td>November 29, 2000 in <a href="https://bit.ly/karlskoga-sweden" target="_blank" rel="noopener">Karlskoga, Sweden</a></td>
                             </tr>
                             <tr>
@@ -89,7 +90,7 @@
                         <div>
                             <br>
                             <p>chasingcream.mp3</p>
-                            <audio controls>
+                            <audio controls> <!-- controls for audio using "controls"-->
                             <source src="assets/audio/beat-chasingcream.mp3">
                             </audio>
                         </div>
